--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2004,7 +2004,7 @@ body.js-page-out .pointer {
 	color: #000;
 }
 
-.pointer__inner.fa-search, 
+.pointer__inner.fa-search,
 .pointer__inner.fa-link {
 	-webkit-transform: translate(-50%, -50%) scale(0);
 	    -ms-transform: translate(-50%, -50%) scale(0);
@@ -2079,7 +2079,7 @@ body.js-page-out .pointer {
 
 .header-logo__img {
 	width: auto;
-	height: 20px;
+	height: 55px;
 	vertical-align: top;
 	-webkit-transform: translateX(-110%);
 	    -ms-transform: translateX(-110%);
@@ -2688,7 +2688,7 @@ body.js-page-out .pointer {
 	-webkit-transition-timing-function: cubic-bezier(.767, .01, .18, 1.01);
 	     -o-transition-timing-function: cubic-bezier(.767, .01, .18, 1.01);
 	        transition-timing-function: cubic-bezier(.767, .01, .18, 1.01);
-	will-change: transform; 
+	will-change: transform;
 }
 
 	.header-social.headroom--unpinned {
@@ -5565,6 +5565,16 @@ button.mfp-close {
 /* ==========================================================================
    15. Swiper sliders
    ========================================================================== */
+
+	 .test{
+		 border-style: solid;
+ 	 		border-color: rgba(210,1,32,0.2);
+			margin: 10px;
+			padding: 20px;
+			padding-bottom: 100px;
+			/* padding: 100px; */
+			background-color: rgba(0,0,0, 0.3);
+	 }
 
 .one-page-slider {
 	height: 100vh;
