--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1460,6 +1460,17 @@ pre code {
 	height: 100%;
 	min-height: 100vh;
 }
+.flex-min-height-50vh {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	   -ms-flex-align: center;
+	      align-items: center;
+	width:  100%;
+	height: 100%;
+	min-height: 50vh;
+}
 
 
 
